--- a/css/bootstrap-icons.css
+++ b/css/bootstrap-icons.css
@@ -598,6 +598,7 @@ url("../fonts/bootstrap-icons.woff?856008caa5eb66df68595e734e59580d") format("wo
 .bi-eyedropper::before { content: "\f342"; }
 .bi-eyeglasses::before { content: "\f343"; }
 .bi-facebook::before { content: "\f344"; }
+.bi-messenger::before { content: "\f344"; }
 .bi-file-arrow-down-fill::before { content: "\f345"; }
 .bi-file-arrow-down::before { content: "\f346"; }
 .bi-file-arrow-up-fill::before { content: "\f347"; }
