--- a/css/tooplate-tween-agency.css
+++ b/css/tooplate-tween-agency.css
@@ -21,7 +21,7 @@ https://www.tooplate.com/view/2128-tween-agency
   --p-color:                      #717275;
   --footer-bg-color:              #07262e;
 
-  --body-font-family:             'Karla', sans-serif;
+  --body-font-family:             'Roboto', sans-serif;
 
   --h1-font-size:                 68px;
   --h2-font-size:                 42px;
