--- a/css/Another.css
+++ b/css/Another.css
@@ -20,3 +20,59 @@
 .col-lg-2 {
     width: 50%;
 }
+
+
+@media only screen and (min-width: 950px) {
+
+    .info-input label {
+        position: absolute;
+        bottom: 3rem;
+    }
+
+    .info-input {
+        position: relative;
+    }
+
+    .input-form {
+        position: absolute;
+        bottom: 0;
+        width: 95%;
+    }
+
+    .custom-form {
+        margin-top: 5rem;
+    }
+
+    .footer-DVLH {
+        display: flex;
+    }
+}
+
+@media only screen and (max-width: 950px) {
+    .footer-DVLH {
+        padding: 1rem;
+    }
+
+    .footer-menu {
+        width: 30rem;
+        margin-bottom: 2rem;
+    }
+}
+
+.footer-menu p {
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+}
+
+.footer-menu a {
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    text-decoration: none;
+}
+
+.footer-menu a:hover {
+    text-decoration: none;
+    color: #38b083;
+}
